--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -272,6 +273,7 @@
                 </p>
             </form>
         </div>
+        <!-- footer -->
         <footer class="footer-section bg-light-grey text-center opacity-60 font-size-24">
             <i class="fa fa-facebook-official hover-opacity"></i>
             <i class="fa fa-instagram hover-opacity"></i>
