--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
         <!-- portfolio -->
         <div class="section" id="portfolio">
-            <h2 class="grey-color
-             portfolio-header">My Portfolio</h2>
+            <h2 class="grey-color  portfolio-header">My Portfolio</h2>
+
             <hr class="opacity-1" />
             <!-- grid images -->
             <div class="row">
@@ -92,7 +92,7 @@
 
             <h2 class="section-header">About</h2>
             <hr class="opacity-1" />
-            <p class="my-3">
+            <p class="my-3 about-p">
                 Some text about me. Some text about me. I am lorem ipsum consectetur
                 adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -183,10 +183,10 @@
             <!-- pricing -->
             <div class="row g-0 px-2 pricing-row">
                 <div class="col-12 col-sm-6 mb-3 px-2">
-                    <div class="card rounded-0 text-center">
+                    <div class="card rounded-0 text-center pricing-font ">
                         <div class="card-header rounded-0">Basic</div>
-                        <ul class="list-group list-group-flush p-2 grey-color
-                        ">
+                        <ul class="list-group list-group-flush p-2 grey-color">
+                        
                             <li class="list-group-item p-3">Web Design</li>
                             <li class="list-group-item p-3">Photography</li>
                             <li class="list-group-item p-3">1 Gb Storage</li>
@@ -205,7 +205,7 @@
                 </div>
 
                 <div class="col-12 col-sm-6 mb-3 px-2">
-                    <div class="card rounded-0 text-center">
+                    <div class="card rounded-0 text-center pricing-font">
                         <div class="card-header bg-black rounded-0">Pro</div>
                         <ul class="list-group list-group-flush p-2 grey-color
                         ">
