--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- header -->
 
         <header class=" text-center" id="home">
-            <h1 class="main-header-name"><b>Jane Doe nnnnnnnn </b></h1>
+            <h1 class="main-header-name"><b>Jane Doe</b></h1>
             <p class="my-3">Photographer and Web Designer .</p>
             <img src="https://www.w3schools.com/w3images/profile_girl.jpg"
                 class="d-none d-sm-block d-lg-none lg-screen-img" />
